# frog

./: .editorconfig  .gitignore  .xo-config.json  Cargo.toml  README.md  bun.lockb  bunfig.toml  error.txt  index.ts  package.json  pnpm-lock.yaml  shell.nix  testing.sh  tsconfig.json  webpack.config.cjs
examples/: gh.toml
nix/: nodejs.nix
src/: banner.rs  cli.rs  config-types.ts  config.ts  consts.rs  error.rs  figlet.ts  index.ts  logger.ts  main.rs  package-manager.ts  registry-manager.ts  setup.ts
src/cli/: program.ts
src/cli/commands/: index.ts  install.ts
src/config/: logger.config.ts  mod.rs
src/core/: checksums.rs  constants.rs  dependency.rs  mod.rs  validation.rs
src/core/package/: package-installer.ts  package-uninstaller.ts  package-updater.ts
src/core/registry/: registry-manager.ts
src/domain/errors/: package-error.ts
src/domain/models/: index.ts  package-reference.ts  package-source.ts  package.ts
src/domain/repositories/: package-repository.ts
src/fs/: mod.rs
src/infrastructure/config/: config.ts
src/infrastructure/fs/: file-system.ts  node-file-system.ts  utils.ts
src/infrastructure/logging/: logger-factory.ts  logger.ts  noop-logger.ts  winston-logger.ts
src/logger/: config.rs  formatter.rs  mod.rs
src/models/: mod.rs
src/package/: error.rs  install.rs  installer.rs  mod.rs  publish.rs  uninstaller.rs  validation.rs
src/perms/: mod.rs
src/pkgs/: bat.ts  eza.ts  index.ts  jetbrains-clion.ts
src/registry/: error.rs  mod.rs  provider.rs
src/repository/: mod.rs
src/utils/: version.ts
(+2 files in other folders)
