[package]
name = "diem"
version = "0.1.0"
edition = "2021"
authors = ["airone01"]
description = "Diem Is an Environment Manager for 42"
license = "Apache 2.0"

[dependencies]
tokio = { version = "1.36", features = ["full", "rt-multi-thread"] }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
clap = { version = "4.5.20", features = ["derive"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
tracing = "0.1"
async-trait = "0.1"
directories = "5.0"
sha2 = "0.10"
semver = "1.0"
symlink = "0.1"
colored = "2.1"
futures = "0.3"
tar = "0.4"
flate2 = "1.0"
openssl = "0.10.68"
tempfile = "3.10"
fs_extra = "1.3"
base64 = "0.21"
bytes = "1.5"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"
clap = { version = "4.5", features = ["derive"] }
