[package]
name = "diem"
version = "0.1.0"
edition = "2021"

[dependencies]
anstyle = "1.0.10"
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0.215", features = ["derive"] }
tokio = { version = "1.41.1", features = ["full"] }
clap_complete = "4.5.38"
dirs = "5.0.1"
ed25519-dalek = "2.1.1"
reqwest = "0.12.9"
semver = "1.0.23"
toml = "0.8.19"
url = "2.5.3"
thiserror = "2.0.3"
tempfile = "3.14.0"
tokio-macros = "2.4.0"
